testsuite/tests/properties/invalid_node_builder/not_lazy.lkt
import common_empty

class Example: BaseExample {
    @exported fun prop(): EmptyNode = EmptyNode.builder().build()
}
